# CPP-utilities

./: .env-example  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bash_aliases_for_docker  compose.yml  config.h  config.h.in  config.status  configure  configure.ac  create_configure.ksh  do_build  docker-compose.yml  dox.cfg  requirements.txt  utilMindMap.mmd
.github/workflows/: cmake-single-platform.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2
cmake/: find_static_lib.cmake  increment_version.cmake
include/: FFT.h  anyutil.h  bayesutil-back.h  bayesutil.h  bit_converter.h  brackets.h  ci_string.h  configure.scan  constants.h  container_convert.h  csvutil.h  dateutil.h  decorator.h  degree_conversion.h  directed_graph.h  directed_graph_tests_debug_functions.h  directed_graph_to_string.h  directed_graph_traits.h  floatingpoint.h  graphutil.h  grid.h  heap.h  instance_pool.h  iosutil.h  json_exceptions.h  json_index_key.h  json_key.h  json_key_path.h  json_object.h  json_string_key.h  limited_int.h  logvalue.h  matrix.h  performance_timer.h  primes.h  statutil.h  stream_decorate.h  stringutil.h  threadutil.h  timer.h  (+6 more)
include/tmp/: degree_conversion.h  extras.h  limited_int.h  limited_int_0.h  limited_int_1.h  limited_int_2.h  limited_int_3.h  limited_int_4.h  limited_int_4_1.h  limited_int_5.h  limited_int_6.h  limited_int_7.h  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
nbproject/private/: configurations.xml  cpp_standard_headers_indexer.cpp  private.xml
src/: CMakeLists.txt  FFT.cc  anyutil.cc  bayesutil-back.cc  bayesutil.cc  csvutil.cc  dateutil.cc  floatingpoint.cc  graphutil.cc  heap.cc  iosutil.cc  json_index_key.cc  json_key_path.cc  json_object.cc  json_string_key.cc  limited_int.cc  primes.cc  statutil.cc  stringutil.cc  threadutil.cc
test/: CMakeLists.txt  FFT_tests.cc  anyutil_tests.cc  bayesutil_tests-back.cc  bayesutil_tests.cc  bit_converter_tests.cc  brackets_tests.cc  container_convert_tests.cc  csvutil_tests.cc  dateutil_tests.cc  decorator_tests.cc  directed_graph_tests.cc  directed_graph_traits_tests.cc  graphutil_tests.cc  heap_tests.cc  instance_pool_tests.cc  limited_int_tests.cc  logval_tests.cc  matrix_tests.cc  performance_timer_tests.cc  primes_tests.cc  statutil_tests.cc  stringutil_tests.cc  threadutil_tests.cc  tinytea_tests.cc
tests/: CMakeLists.txt  FFTTest.cc  FFTTest.h  anyutilTest.cc  anyutilTest.h  bayesutilTest.cc  bayesutilTest.h  bitConverterTest.cc  bitConverterTest.h  csvutilTest.cc  csvutilTest.h  dateutilTest.cc  dateutilTest.h  graphutilTest.cc  graphutilTest.h  instancePoolTest.cc  instancePoolTest.h  limitedIntTest.cc  limitedIntTest.h  logValTest.cc  logValTest.h  matrixTest.cc  matrixTest.h  primesTest.cc  primesTest.h  statutilTest.cc  statutilTest.h  stringutilTest.cc  stringutilTest.h  testrunner.cc  tests.cc  tinyTeaTest.cc  tinyTeaTest.h  utiltests.cc
