add_library(dkanyutil STATIC anyutil.cc)
#add_library(dkbayesutil STATIC bayesutil.cc)
add_library(dkcsvutil STATIC csvutil.cc)
add_library(dkdateutil STATIC dateutil.cc)
add_library(dkfloatingpoint STATIC floatingpoint.cc)
target_link_libraries(dkfloatingpoint PRIVATE gmp)
add_library(dkprimes STATIC primes.cc)
add_library(dkstatutil STATIC statutil.cc)
add_library(dkthreadutil STATIC threadutil.cc)
